--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express3-handlebars": "^0.5.2",
     "hbs": "~4.0.0",
     "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
