--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "hbs": "~4.0.0",
     "mongoose": "^4.6.5",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "passport": "*",
+    "passport-local": "*",
+    "passport-facebook": "*",
+    "passport-vkontakte": "*",
+    "nconf": "*",
+    "connect-flash": "*",
+    "connect-memcached": "*",
+    "express-session": "latest"
   }
 }
